--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "hardhat": "^2.18.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
